* Thu Jan 17 2008 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.3.3-1)
- graphpainter: fix for selecting yaxis.
- nmrpulse, nmrspectrumbase, mem: Search for peaks.

* Tue Jan 15 2008 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.3.2-1)
- math : new folder.
- FFTW ver 3.
- nmrspectrum : Abs. plot. Fix for handling weights.

* Fri Jan 11 2008 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.3.1-2)
- nmrrelax : Convolution w/o FFT.

* Thu Jan 10 2008 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.3.1-1)
- nmrrelax : Window. Auto-window. Direct Fourier.
- nmrspectrumbase : Its own FFT.

* Thu Jan 3 2008 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.3.0-1)
- nmrpulse, nmrspectrumbase : DSO plots, MEM/AR for DNR & spectra.
- nmrrelax.cpp : Im plot.

* Thu Nov 29 2007 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.2.20-1)
- nmrpulse : rewrite DNR. Reflect extraAvg while increasing.

* Tue Nov 20 2007 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.2.19-1)
- Fast read/write 64bit in 32bit machines.
- SSE2 by default.
- Rearrange main form.
- Fix for dead locks.

* Mon Nov 19 2007 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.2.18-1)
- rubylineshell.
- pulserdrivercore: fix for pregating.

* Fri Nov 16 2007 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.2.17-1)
- Replace admin dir.
- kame/Makefile.am: simplified.
- configure.in.in: fix for ruby.h.
- node browser.
- node: remember parent.
- nmrcore: merge sgcore and pulsercore.

* Sun Nov 11 2007 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.2.16-1)
- secondarydriver: Improved stability regarding dead-locks.
- pulserdriver: Improved pre-gating.
- g++-4 for FTGL w/ -fpermissive.
- atomic_prv_x86.h: 64bit support.

* Mon Oct 22 2007 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.2.15-1)
- network analyzers.
- nmrspectrum, nmrfspectrum: code refactoring & auto scale.

* Sat Oct 20 2007 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.2.14-1)
- userdmm: HP3478A.
