@@ -1,7 +1,8 @@
-* Thu Jan 17 2008 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
+* Mon Jan 21 2008 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
 - (2.3.3-1)
 - graphpainter: fix for selecting yaxis.
 - nmrpulse, nmrspectrumbase, mem: Search for peaks.
+- freqest: Freq. estimation. MUSIC.
 
 * Tue Jan 15 2008 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
 - (2.3.2-1)
